# Sinking-Funds

./: .gitignore  README.md  next_pay_total.py  project_dump.txt  pyproject.toml  run_month.py  seed_opening.py
data/: recurring.yaml
sinking_funds/: __init__.py  cli_add_event.py  events.py  persistence.py  scheduler.py  simulation.py
sinking_funds.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_contrib_marker.py  test_event_processing.py  test_future_events_ignored.py  test_month_math.py  test_persistence.py  test_pre_window_events.py  test_resume.py  test_scheduler.py  test_sinking_funds.py  test_total_row.py
